public/style/article-detail.css
.article-detail__container {
  margin: auto;
}

.Outlines__List{
  list-style-type: none;
  display: grid;
}

.howMightWe{
  margin-top: 100px;
  display: flex;
    justify-content: center;
}



.howMightWe-container{
  display: flex;
  align-items: center;
  padding:40px 0 40px 0;
  margin:auto;
  --gap: 30px;
  --column-gap: var(--gap);
  --row-gap: var(--gap);
  margin: calc(var(--row-gap) / -2) calc(var(--column-gap) / -2);
}



.howMightWe-container  > * {
  margin: calc(var(--row-gap) / 2) calc(var(--column-gap) / 2);
}



/* .howMightWe-container__icon{
  font-size: 10em;
} */

@media only screen and (max-width: 600px) {



    .article-detail__width {
        max-width: 90vw;
      }

  .article-detail__header-image {
    margin-top: 0px;
    height: 50vh;
    display: flex;
    overflow: hidden;
    justify-content: center; /* align horizontal */
    align-items: center; /* align vertical */
  }

  .article-detail__header-image img {
    height: 100%;
  }

  .article-detail__heading {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    margin-top: 20px;

  }

  .article-detail__info {
    margin-top: 50px;

  }

  .article-detail__domains {
    margin-top: 32px;
  }
  .article-detail_domains__Tags {
    margin-top: 16px;
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    max-height: auto;
    grid-column-gap: 1em;
    grid-row-gap: 1em;
  }
  .article-detail_domains__Tags__Tag {
    padding-top: 20%;
    padding-bottom: 20%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    gap: 10px;
    align-items: center;
  }

  .Outlines__List{
    margin-top: 2em;
    grid: auto;
    grid-row-gap: 2em;
  }


  .Article-detail__description{
margin-top: 20px;
  }
  .Article-detail__description--text{
    column-count: 1;
  }
  .Article-detail__description__inlineImages{
    margin-top: 38px;
    display: flex;
    flex-wrap: nowrap;
    overflow: hidden;
    justify-content: space-between;
    gap: 1em;
  }

  .Article-detail__description__Image{
    margin-top: 64px;
  }

  .Article-detail__description__inlineImages__box{
    flex-grow: 1;
    flex-basis: 0;
  }
  .Article-detail__description__inlineImages--size{
    max-width: 100%;
  }




}

@media only screen and (min-width: 600px) and (max-width: 1200px) and (orientation: portrait) {


    .article-detail__width {
        max-width: 80vw;
      }

  .article-detail__header-image {
    margin-top: 0px;
    height: 50vh;
    display: flex;
    overflow: hidden;
    justify-content: center; /* align horizontal */
    align-items: center; /* align vertical */
  }

  .article-detail__header-image img {
    height: 100%;
  }

  .article-detail__heading {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    margin-top: 20px;

  }

  .article-detail__info {
    margin-top: 50px;
    display: flex;
    justify-content: flex-end;
  }
  .article-detail__info p {
    width: 70%;
  }
  .article-detail__domains {
    margin-top: 100px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .article-detail_domains__Tags {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    max-height: auto;
    grid-column-gap: 1em;
    grid-row-gap: 1em;
    width: 70%;
  }
  .article-detail_domains__Tags__Tag {
    padding-top: 10%;
    padding-bottom: 10%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    gap: 10px;
    align-items: center;
  }
  .Outlines__List{
    grid-template-columns: auto;
    width: 70%;
    grid-row-gap: 2em;
  }
  .Article-detail__description{
    justify-self: flex-end;
      width: 70%;
  }

      .Article-detail__description--text{
        column-count: 1;
      }
      .Article-detail__description__inlineImages{
        margin-top: 38px;
        display: flex;
        flex-wrap: nowrap;
        overflow: hidden;
        justify-content: space-between;
        gap: 1em;
      }
    
      .Article-detail__description__Image{
        margin-top: 64px;
      }
    
      .Article-detail__description__inlineImages__box{
        flex-grow: 1;
        flex-basis: 0;
      }
      .Article-detail__description__inlineImages--size{
        max-width: 100%;
      }
    


}

@media only screen and (min-width: 600px) and (max-width: 1200px) and (orientation: landscape) {
    .article-detail__width {
        max-width: 80vw;
      }

 
      .article-detail__header-image {
        margin-top: 50px;
        max-height: 80vh;
        display: flex;
        overflow: hidden;
      }
    
      .article-detail__header-image img {
        align-self: center;
        justify-self: center;
        max-width: 100%;
      }

  .article-detail__heading {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    margin-top: 20px;

  }

  .article-detail__info {
    margin-top: 50px;
    display: flex;
    justify-content: flex-end;
  }
  .article-detail__info p {
    width: 70%;
  }
  .article-detail__domains {
    margin-top: 100px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .article-detail_domains__Tags {
    display: grid;
    grid-template-columns: repeat(4, minmax(0, 1fr));
    max-height: auto;
    grid-column-gap: 1em;
    grid-row-gap: 1em;
    width: 70%;
  }
  .article-detail_domains__Tags__Tag {
    padding-top: 20%;
    padding-bottom: 20%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    gap: 10px;
    align-items: center;
  }

  .Outlines__List{
    grid-template-columns: auto;
    width: 70%;
    grid-row-gap: 2em;
  }

  .Article-detail__description{
    justify-self: flex-end;
      width: 70%;
  }

      .Article-detail__description--text{
        column-count: 1;
      }
      .Article-detail__description__inlineImages{
        margin-top: 38px;
        display: flex;
        flex-wrap: nowrap;
        overflow: hidden;
        justify-content: space-between;
        gap: 1em;
      }
    
      .Article-detail__description__Image{
        margin-top: 64px;
      }
    
      .Article-detail__description__inlineImages__box{
        flex-grow: 1;
        flex-basis: 0;
      }
      .Article-detail__description__inlineImages--size{
        max-width: 100%;
      }
    



}

@media only screen and (min-width: 1200px) {
  .article-detail__width {
    max-width: 60vw;
  }

  .article-detail__header-image {
    margin-top: 50px;
    max-height: 80vh;
    display: flex;
    overflow: hidden;
  }

  .article-detail__header-image img {
    align-self: center;
    justify-self: center;
    max-width: 100%;
  }

  .article-detail__heading {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    margin-top: 50px;
  }
  .article-detail__info {
    margin-top: 50px;
    display: flex;
    justify-content: flex-end;
  }
  .article-detail__info p {
    width: 70%;
    column-count: 2;
  }

  .article-detail__domains {
    margin-top: 100px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
  }
  .article-detail_domains__Tags {
    display: grid;
    grid-template-columns: repeat(4, minmax(0, 1fr));
    max-height: auto;
    grid-column-gap: 1em;
    width: 70%;
  }
  .article-detail_domains__Tags__Tag {
    border-radius: 3px;
    padding-top: 20%;
    padding-bottom: 20%;
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    gap: 10px;
    align-items: center;
  }

  .Outlines__List{
    grid-template-columns: auto auto;
    width: 70%;
    grid-column-gap: 2em;
  }

  .Article-detail__description{
    justify-self: flex-end;
      width: 70%;
  }
  .Article-detail__description--text{
    column-count: 2;
  }
  .Article-detail__description__inlineImages{
    margin-top: 38px;
    display: flex;
    flex-wrap: nowrap;
    overflow: hidden;
    justify-content: space-between;
    gap: 1em;
  }

  .Article-detail__description__Image{
    margin-top: 64px;
  }

  .Article-detail__description__inlineImages__box{
    flex-grow: 1;
    flex-basis: 0;
  }
  .Article-detail__description__inlineImages--size{
    max-width: 100%;
  }

}



@media only screen and (min-width: 1900px) {
  .article-detail__width {
    max-width: 50vw;
  }

}

